css/style.css
.divider {
    height:50px;
}

section {
    height:500px;
    padding-top:50px;
    padding-bottom:50px;
    overflow:auto;
}

.bg-1 {
    width: 100vw;
    height: 100vh;
	background: url('../images/henrybeach.jpg') no-repeat center center fixed;
    color:#fff;
    background-size:cover;
}
  
.bg-2 {
	background: url('../images/tree.jpeg') no-repeat top center fixed;
    color:#fff;
    background-size:cover;
}

.bg-3 {
	background: url('../images/lake.jpeg') no-repeat bottom center fixed;
    color:#fff;
    background-size:cover;
}

#footer {
    height: 60px;
    background-color:#585858;
    margin-top:50px;
    padding-top:20px;
    padding-bottom:20px;
}

#footer a {
  color:#efefef;
}
/* this is the css for the contact form part of the webpage */
#hello{
    float: right;
    margin-right: 24px;
    margin-top: 100px;
    
}

#contact{
    margin-left: 24px;
    margin-top: 100px;
    margin-top: 100px;

}

#divResults{
    background-color: rgba(34, 34, 34, 0.7);
    height: 500px;
    width: 1000px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 100px;
    position: relative;
}
#txtUserMessage {
    width: 375px;
    height: 250px;
    text-align: center;
    margin-top: 24px;
}


#txtFirstName {
    width: 250px;
    height: 45px;
    margin-top: 100px;

}

#txtLastName {
    width: 250px;
    height: 45px;

}

#txtEmail {
    width: 250px;
    height: 45px;
}

#txtmobile{
    width: 250px;
    height: 45px;
}

/* social media css */

